@@ -1,3 +1,7 @@
+2007-10-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/weight.R: Weighting functions for TermDocMatrix.
+
 2007-10-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/termdocmatrix.R (dimnames, colnames, rownames): Wrapper
